# scala

./: .gitignore  CMakeLists.txt  DIRECT_KV_MODULE_PR.md  Makefile  PR-0070-SUMMARY.md  README.md  flake.nix  manifest.json  metadata.json  module.yaml  ui_metadata.json
.github/workflows/: ci.yml
cli/: README.md  scala-cli.sh  scala_cli.cpp
modules/scala_module/: manifest.json
qml/: CalendarGrid.qml  CalendarSidebar.qml  CalendarView.qml  EventDetails.qml  EventModal.qml  SettingsPanel.qml  ShareDialog.qml  scala_ui.qrc
scripts/: screenshot.sh  start-scala-with-kv.sh
src/: calendar_module.cpp  calendar_module.h  calendar_store.cpp  calendar_store.h  calendar_sync.cpp  calendar_sync.h  i_kv_module.h  plugin.cpp  qr_generator.cpp  qr_generator.h  scala_bridge.cpp  scala_bridge.h  scala_plugin.cpp  scala_plugin.h  scala_ui_component.cpp  scala_ui_component.h  types.h
standalone/: main.cpp
tests/: CMakeLists.txt  test_calendar.cpp  test_encryption.cpp  test_identity.cpp  test_module.cpp  test_namespace.cpp  test_sharing.cpp  test_sync.cpp
tests/cli/: test_cli.sh
tests/qml/: tst_CalendarView.qml  tst_main.cpp
tools/: e2e-test.sh  scala-cli
